fixing on mobile

--- a/webapp/client/src/assets/css/components/_sidebar.scss
+++ b/webapp/client/src/assets/css/components/_sidebar.scss
@@ -10,6 +10,11 @@
   border-radius: 0.25rem;
   padding: 30px 20px;
 
+  @media (max-width: 768px) {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
   &__title {
     font-size: 20px;
     text-align: center;
