--- a/webapp/client/src/assets/css/themes/_default.scss
+++ b/webapp/client/src/assets/css/themes/_default.scss
@@ -6,9 +6,9 @@
 #app {
   display: flex;
   justify-content: flex-start;
-  max-width: 1200px;
+  max-width: 1230px;
   margin: 0 auto;
-  padding: 60px 0;
+  padding: 60px 15px;
 
   main {
     margin-left: 30px;
